fileparser/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileparser-service
  labels:
    app: fileparser
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fileparser
  type: ClusterIP
